--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
     "phpunit/phpunit": "4.3.*"
   },
   "autoload": {
-    "psr-4": {"Electrician\\": "src/Electrician"}
+    "psr-4": {"Electrician\\": "src"}
   }
 }
